fix the gap in navabr

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,37 +22,43 @@ body {
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+	/* margin-top: 25px; */
 }
 
-#navbar {
+.space {
+	height: 80px;
+}
+/* #navbar {
   width: 46px;
   height: 46px;
   border-radius: 50%;
   overflow: hidden;
-  margin-top: -6px;
-}
+  /* margin-top: -6px; */
+	/* background-color: #6626d6; */
+
+
 
 .line {
   background-color: #DCC7AA;
-  height: 55px;
+  height: 58%;
 }
 
 #logo {
-  height: 90px;
+	width: 100%;
 }
 
 .container-main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 35px;
+  /* margin-top: 35px; */
 }
 
 .main-box {
   font-size: 26px;
   padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 25px;
+  padding-right: 25px;
   text-align: center;
   color: #6B7A8F;
   -webkit-border-radius: 15px;
@@ -60,7 +66,7 @@ body {
   border-radius: 15px;
   background-color: #DCC7AA;
   margin: auto;
-  width: 600px;
+  width: 625px;
   height: 470px;
 }
 
@@ -104,12 +110,13 @@ body {
 }
 
 .footer {
-  margin-top: 10px;
+  /* margin-bottom: -30px; */
+	padding-bottom: 20px;
   padding: 5px;
   font-size: smaller;
   color: #6B7A8F;
   text-align: center;
   width: 100%;
-  height: 60px;
+  height: 66px;
   background: #DCC7AA;
 }
